<resources>
    <string name="app_name">Plateful</string>
    <string name="signup">Signup</string>
    <string name="default_web_client_id">1082972687699-dn1nnojn29rurdshc2dl596gquu61136.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_lined"><u>Login</u></string>
    <string name="login">Login</string>
    <string name="sign_up_lined"><u>Sign Up</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="plateful">Plateful</string>
    <string name="email_login">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="plan">Plan</string>
    <string name="search">Search</string>
    <string name="content_description_search">content description search</string>
    <string name="page_title">page title</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="meal">Meal</string>
    <string name="area">Area</string>
    <string name="category">Category</string>
    <string name="add_to_plan">Add to plan</string>
    <string name="daily_inspiration">Daily inspiration</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="categories">Categories</string>
    <string name="areas">Areas</string>
    <string name="meals">Meals</string>
    <string name="no_meals_has_been_saved">No meals has been saved</string>
    <string name="search_for_meals_to_save">Search for meals to save !</string>
    <string name="country">Country</string>
    <string name="logout">Logout</string>
    <string name="my_plans">My Plans</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="please_fill_in_all_the_fields">Please fill in all the fields.</string>
    <string name="ok">OK</string>
    <string name="remove_from_favourites">Remove from favourites</string>
    <string name="remove_from_plan">Remove from plan</string>
    <string name="there_is_an_error_occurred">There is an error occurred.</string>
    <string name="sign_up_for_more_features">Sign up for more features!</string>
    <string name="guest">Guest</string>
    <string name="hello_guest">Hello! Guest</string>
</resources>