<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/intro_background"
    tools:context=".views.intro.IntroFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="180dp"
        android:src="@drawable/intro_logo2"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintHeight_percent="0.20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        />

    <TextView
        android:id="@+id/appName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/playball"
        android:text="@string/plateful"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="90dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif-condensed-medium"
        android:paddingTop="0dp"
        android:text="@string/login"
        android:textColor="@color/intro_background"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpBtn_intro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif-condensed-medium"
        android:paddingTop="0dp"
        android:text="@string/sign_up"
        android:textColor="@color/intro_background"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn_intro"
        app:layout_constraintStart_toStartOf="@+id/loginBtn_intro"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn_intro" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpBtn_intro"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        >
        <com.google.android.material.card.MaterialCardView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/googleBtn"
            app:cardCornerRadius="100dp"
            app:cardBackgroundColor="@color/white"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/google"

                />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/guestBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="100dp">

            <ImageView
                android:id="@+id/imageButton5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/guest" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>