<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.mealDetails.MealDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="50dp">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/baseline_arrow_back_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="16dp"/>

            <ImageButton
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_baseline_bookmark_border_24"
                app:layout_constraintTop_toTopOf="@id/back"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/back"
                app:layout_constraintEnd_toEndOf="@id/save"
                app:layout_constraintTop_toBottomOf="@id/back"
                tools:text="Meal Title Text View"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:fontFamily="@font/capriola"
                android:layout_marginTop="32dp"
                />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/main_card"
                android:layout_width="0dp"
                android:layout_height="200dp"
                app:layout_constraintStart_toStartOf="@id/back"
                app:layout_constraintEnd_toEndOf="@id/save"
                app:layout_constraintTop_toBottomOf="@id/title"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                app:strokeWidth="0dp"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/main_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/logo" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tags"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/back"
                app:layout_constraintEnd_toEndOf="@id/save"
                app:layout_constraintTop_toBottomOf="@id/main_card"
                tools:text="tag1,tag2"
                android:layout_marginTop="1dp"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:fontFamily="@font/capriola"
                android:drawableLeft="@drawable/sharp_tag_24"
                android:textAlignment="textStart"
                android:gravity="center"
                android:drawablePadding="5dp"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/category_card"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:layout_constraintTop_toBottomOf="@id/tags"
                app:layout_constraintStart_toStartOf="@id/main_card"
                app:cardCornerRadius="100dp"
                app:cardBackgroundColor="@color/intro_background"
                android:layout_marginTop="16dp"
                app:strokeWidth="0dp"
                app:cardElevation="2dp"
                >
                <ImageView
                    android:id="@+id/category_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/logo"/>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/category_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Category Name"
                app:layout_constraintTop_toTopOf="@id/category_card"
                app:layout_constraintStart_toEndOf="@id/category_card"
                app:layout_constraintBottom_toTopOf="@id/area_name"
                android:fontFamily="@font/capriola"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginStart="8dp"
                />

            <TextView
                android:id="@+id/area_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="location Name"
                app:layout_constraintStart_toStartOf="@id/category_name"
                app:layout_constraintTop_toBottomOf="@id/category_name"
                app:layout_constraintBottom_toBottomOf="@id/category_card"
                android:fontFamily="@font/capriola"
                android:textSize="10sp"
                android:textColor="@color/black"
                android:drawableStart="@drawable/outline_location_on_24"
                android:gravity="center"
                android:drawablePadding="2dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/category_card"
                app:layout_constraintBottom_toBottomOf="@id/category_card"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:text="@string/add_to_plan"
                android:textColor="@color/white"
                android:backgroundTint="@color/button_color"
                app:cornerRadius="10dp"/>

            <TextView
                android:id="@+id/ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/category_card"
                app:layout_constraintStart_toStartOf="@id/back"
                android:text="@string/ingredients"
                android:textSize="18sp"
                android:fontFamily="@font/capriola"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/ingredient"
                app:layout_constraintBottom_toBottomOf="@id/ingredient"
                app:layout_constraintEnd_toEndOf="@id/save"
                tools:text="3 items"
                android:textSize="14sp"
                android:fontFamily="@font/capriola"
                android:textColor="@color/black"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredients_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/back"
                app:layout_constraintEnd_toEndOf="@id/save"
                app:layout_constraintTop_toBottomOf="@id/ingredient"
                android:layout_marginTop="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:nestedScrollingEnabled="false"/>

            <TextView
                android:id="@+id/steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ingredients_recycler_view"
                app:layout_constraintStart_toStartOf="@id/back"
                android:text="@string/steps"
                android:textSize="18sp"
                android:fontFamily="@font/capriola"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"/>

            <WebView
                android:id="@+id/web_view"
                android:layout_width="0dp"
                android:layout_height="200dp"
                app:layout_constraintStart_toStartOf="@+id/back"
                app:layout_constraintEnd_toEndOf="@id/save"
                app:layout_constraintTop_toBottomOf="@id/steps"
                android:layout_marginTop="16dp"
                />

            <TextView
                android:id="@+id/actual_steps"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/web_view"
                app:layout_constraintStart_toStartOf="@id/back"
                app:layout_constraintEnd_toEndOf="@id/save"
                tools:text="hjkcjcdjkckj"
                android:textSize="12sp"
                android:fontFamily="@font/capriola"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>